--- a/project2.html
+++ b/project2.html
@@ -62,9 +62,9 @@
   <p><a class="nav-pill" href="https://github.com/sthef-silva/Tiny-Accumulator-Machine--TAM----Two-Word-Instruction-VM-in-C/blob/main/elf.txt" target="_blank">Open elf.txt on GitHub</a></p>
 
   <!-- Captured run -->
-  <h4 style="margin-top:1rem;">Execution Trace</h4>
+  <h4 style="margin-top:1rem;">Example Output</h4>
   <pre id="tam-trace" class="codeblock">Loading run log…</pre>
-  <p><a class="nav-pill" href="https://github.com/sthef-silva/Tiny-Accumulator-Machine--TAM----Two-Word-Instruction-VM-in-C/blob/main/run_example.txt" target="_blank">View full run log</a></p>
+  <p><a class="nav-pill" href="https://github.com/sthef-silva/Tiny-Accumulator-Machine--TAM----Two-Word-Instruction-VM-in-C/blob/main/programoutput.txt" target="_blank">View full run log</a></p>
 </section>
 
 <script>
@@ -83,7 +83,7 @@
 
   // Show both input and run trace
   loadInto("tam-program", "elf.txt");
-  loadInto("tam-trace", "run_example.txt"); // <-- add this file to your repo
+  loadInto("tam-trace", "programoutput.txt"); // <-- once C program runs, file creates //Output
 </script>
 
 
