Update style.css - buttons

--- a/project2.html
+++ b/project2.html
@@ -57,9 +57,9 @@
   </p>
 
   <!-- Input file -->
-  <h4>Program (elf.txt)</h4>
+  <h4>Example Input (elf.txt)</h4>
   <pre id="tam-program" class="codeblock">Loading elf.txt…</pre>
-  <p><a class="nav-pill" href="https://github.com/sthef-silva/Tiny-Accumulator-Machine--TAM----Two-Word-Instruction-VM-in-C/blob/main/elf.txt" target="_blank">Open elf.txt on GitHub</a></p>
+  <p><a class="nav-pill" href="https://github.com/sthef-silva/Tiny-Accumulator-Machine--TAM----Two-Word-Instruction-VM-in-C/blob/main/tinyvm.c" target="_blank">Open tinyvm.c on GitHub</a></p>
 
   <!-- Captured run -->
   <h4 style="margin-top:1rem;">Example Output</h4>
