Update style.css - buttons

--- a/project1.html
+++ b/project1.html
@@ -32,8 +32,8 @@
       </header>
 
       <figure class="project-figure">
-        <!--TODO: Upload Images-->
-
+        
+        <!--Images-->
         <img src="assets\css\images\project1_projectpage.png" alt="Image illustrating Project 1" />
         <figcaption>Simulates enterprise workflows using an event queue, resources, and processing times.</figcaption>
   </figure>
@@ -49,7 +49,6 @@
       </section>
 
         <!-- Try-it demo: use ONE of the two iframes below. -->
-        <!-- A) If you have a browser build deployed with GitHub Pages for this repo, keep this: -->
         <section class="card" aria-labelledby="demo-heading">
           <h3 id="demo-heading">Try the Simulator</h3>
           <p class="disclaimer" role="note">“Prototype demo – does not reflect final implementation or performance.”</p>
@@ -82,7 +81,7 @@
           <li>Business rules &amp; formatting</li>
           <li>Validation &amp; error handling</li>
           <li>Testing/QA artifacts</li>
-      <!--Java stack (use this instead if your project is Java)-->
+      <!--Java stack -->
           <li>Java (collections, OOP design, random distributions)</li>
           <li>Discrete-event simulation design (event list, queues, resources)</li>
           <li>Metrics &amp; reporting (throughput, wait time, utilization)</li>
