--- a/project2.html
+++ b/project2.html
@@ -31,7 +31,7 @@
       </header>
 
       <figure class="project-figure">
-        <!-- Replace with a TAM screenshot/diagram -->
+        <!-- Image -->
         <img src="assets\css\images\project2.jpg" alt="Diagram of Tiny Accumulator Machine: PC, ACC, RAM, and instruction format" />
         <figcaption>Two-word instruction virtual machine: <em>opcode</em> + <em>operand</em>, with PC, ACC, RAM, and basic control flow.</figcaption>
       </figure>
@@ -87,7 +87,7 @@
 </script>
 
 
-      <!-- How-to (keep brief; readers can use the README for full details) -->
+      <!-- README  -->
       <section aria-labelledby="howto-heading" class="card">
         <h3 id="howto-heading">How to Run (Repo)</h3>
         <ol>
