--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Résumé website for Sthefanny Silva (CIS 4004 Project 1)" />
   <!-- absolute path prevents path confusion on GitHub Pages -->
-  <link rel="stylesheet" href="assets/css/styles.css" />
+  <link rel="stylesheet" href="assets/css/styles.css?v=3">
   <title>Sthefanny Silva — Resume</title>
 </head>
 <body>
