--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <div class="header-actions">
         <!-- Download Resume Button -->
-      <a class="action-button" href="assets/Sthefanny_Silva_Resume.pdf" download>Download as PDF</a>
+      <a class="action-button" href="assets/Sthefanny_Silva_Resume.pdf" download>Download Resume</a>
       <!-- TODO: Input pdf to download (idea provider converter if website keeps updating instead of updating the resume separately)-->
     </div>
   </header>
