--- a/index.html
+++ b/index.html
@@ -17,18 +17,15 @@
     <p class="site-tagline">Information Technology · University of Central Florida</p>
   </div>
 
-  <nav id="site-nav" class="site-nav" role="navigation" aria-label="Primary">
-    <ul>
-      <li><a class="nav-pill" href="index.html" aria-current="page">Home</a></li>
-      <li><a class="nav-pill" href="project1.html">EDESim</a></li>
-      <li><a class="nav-pill" href="project2.html">TAM</a></li>
-    </ul>
-  </nav>   
-
-    <div class="header-actions">
+    <nav id="site-nav" class="site-nav" role="navigation" aria-label="Primary">
+      <ul>
+        <li><a class="nav-pill" href="index.html" aria-current="page">Home</a></li>
+        <li><a class="nav-pill" href="project1.html">EDESim</a></li>
+        <li><a class="nav-pill" href="project2.html">TAM</a></li>
         <!-- Download Resume Button -->
-      <a class="action-button" href="assets/Sthefanny_Silva_Resume.pdf" download>Download Resume</a>
-    </div>
+        <li><a class="action-button" href="assets/Sthefanny_Silva_Resume.pdf" download>Download Resume</a></li>
+      </ul>
+    </nav>   
   </header>
 
   <main id="content" class="narrow" role="main">
