Created Professional Objective

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
     <section class="main-column">
       <section aria-labelledby="objective-heading" class="card">
         <h2 id="objective-heading">Professional Objective</h2>
-        <p><!-- TODO: Paste your 1–2 sentence objective here. --></p>
+        <p>Motivated Information Technology student with a strong foundation in computer science and hands-on experience in data analysis, networking, and system administration. 
+          Seeking to leverage technical expertise in cybersecurity, enterprise systems, and IT support to deliver secure, efficient, and user-focused solutions. 
+          Dedicated to continuous learning through industry certifications and practical projects, with the goal of contributing to innovative IT teams and advancing into cybersecurity and infrastructure roles.</p>
       </section>
 
       <section aria-labelledby="education-heading" class="card">
