Update Resume Buttons

--- a/project1.html
+++ b/project1.html
@@ -21,6 +21,7 @@
         <li><a class="nav-pill" href="index.html">Home</a></li>
         <li><a class="nav-pill" href="project1.html" aria-current="page">EDESim</a></li>
         <li><a class="nav-pill" href="project2.html">TAM</a></li>
+        <li><a class="action-button" href="assets/Sthefanny_Silva_Resume.pdf" download>Download Resume</a></li>
       </ul>
     </nav>
   </header>
