--- a/project2.html
+++ b/project2.html
@@ -20,6 +20,7 @@
         <li><a class="nav-pill" href="index.html">Home</a></li>
         <li><a class="nav-pill" href="project1.html">EDESim</a></li>
         <li><a class="nav-pill" href="project2.html" aria-current="page">TAM</a></li>
+        <li><a class="action-button" href="assets/Sthefanny_Silva_Resume.pdf" download>Download Resume</a></li>
       </ul>
     </nav>
   </header>
