--- a/project1.html
+++ b/project1.html
@@ -1,3 +1,11 @@
+<!--
+  Author: Sthefanny Silva
+  Class: CIS 4004 – Project 1
+  Assignment: Résumé Website
+  Date: September 2025
+  Description: Personal résumé site including objective, education, experience, projects, and skills.
+-->
+
 <!doctype html>
 <html lang="en" dir="ltr">
 <head>
